Fix alignment in thumbnail view

--- a/htdocs/theme/views.css
+++ b/htdocs/theme/views.css
@@ -418,6 +418,12 @@ html>body #column-container {
     padding: 8px;
     vertical-align: middle;
 }
+.thumbnails {
+  padding: .5em;
+}
+.thumbnails img {
+  vertical-align: middle;
+}
 
 /* tabs for the artefact chooser */
 ul.artefactchooser-tabs {
